RESOLVED FIXED64909
DFG JIT - Missing ToInt32 conversions for double constants.
https://bugs.webkit.org/show_bug.cgi?id=64909
Summary DFG JIT - Missing ToInt32 conversions for double constants.
Gavin Barraclough
Reported 2011-07-20 17:33:29 PDT
This is causing Kraken to fail.
Attachments
The patch (3.03 KB, patch)
2011-07-20 17:35 PDT, Gavin Barraclough
sam: review+
Gavin Barraclough
Comment 1 2011-07-20 17:35:33 PDT
Created attachment 101533 [details] The patch
Gavin Barraclough
Comment 2 2011-07-20 17:42:45 PDT
Fixed in r91429
Note You need to log in before you can comment on or make changes to this bug.