https://bugs.webkit.org/show_bug.cgi?id=64909 DFG JIT - Missing ToInt32 conversions for double constants.

Reviewed by Sam Weinig.

Source/JavaScriptCore:

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::toInt32):
    - We cannot trivially omit ToInt32 conversions on double constants.

LayoutTests:

* fast/js/bitops-type-tag-expected.txt:
* fast/js/script-tests/bitops-type-tag.js:
    - Test case for DFG JIT.



Canonical link: https://commits.webkit.org/80651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91429 268f45cc-cd09-0410-ab3c-d52691b4dbfc